syntax = "proto3";

package ai.floedb.metacat.planning;

option java_multiple_files = true;
option java_package = "ai.floedb.metacat.planning.rpc";
option java_outer_classname = "PlanningProto";

import "common/common.proto";
import "google/protobuf/timestamp.proto";
import "catalog/stats.proto";

message PlanInput {
  oneof target {
    ai.floedb.metacat.common.NameRef name = 1;
    ai.floedb.metacat.common.ResourceId table_id = 2;
    ai.floedb.metacat.common.ResourceId view_id = 3;
  }
  ai.floedb.metacat.common.SnapshotRef snapshot = 10;
}

enum PlanStatus {
  SUBMITTED = 0;
  COMPLETED = 1;
  FAILED = 2;
}

message SnapshotPin {
  ai.floedb.metacat.common.ResourceId table_id = 1;
  int64 snapshot_id = 2;
  google.protobuf.Timestamp as_of = 3;
}

message SnapshotSet {
  repeated SnapshotPin pins = 1;
}

message TableObligations {
  ai.floedb.metacat.common.ResourceId table_id = 1;

  message ColumnMask {
    string column = 1;
    string expression = 2; // SQL expression to compute masked value
  }

  repeated ColumnMask masks = 2;
  string row_filter_expression = 3; // boolean SQL predicate; empty = no filter
}

message ExpansionMap {
  message ExpandedView {
    ai.floedb.metacat.common.ResourceId view_id = 1;
    string canonical_sql = 2;
    repeated ai.floedb.metacat.common.ResourceId base_table_ids = 3;
  }

  repeated ExpandedView views = 1;

  repeated ai.floedb.metacat.common.ResourceId read_via_view_tables = 2;
}

enum FileContent {
  DATA = 0;
  POSITION_DELETES = 1;
  EQUALITY_DELETES = 2;
}

message PlanFile {
  string file_path = 1;
  string file_format = 2;
  uint64 file_size_in_bytes = 3;
  uint64 record_count = 4;
  FileContent file_content = 5;
  repeated ai.floedb.metacat.catalog.ColumnStats columns = 6;
}

message PlanDescriptor {
  string plan_id = 1;
  string tenant_id = 2;
  PlanStatus plan_status = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp expires_at = 5;
  SnapshotSet snapshots = 6;
  ExpansionMap expansion = 7;
  repeated TableObligations obligations = 8;
  repeated PlanFile data_files = 9;
  repeated PlanFile delete_files = 10;
}

message BeginPlanRequest {
  repeated PlanInput inputs = 1;
  google.protobuf.Timestamp as_of_default = 2;
  int32 ttl_seconds = 3;
}

message BeginPlanResponse {
  PlanDescriptor plan = 1;
}

message RenewPlanRequest {
  string plan_id = 1;
  int32 ttl_seconds = 2;
}
message RenewPlanResponse {
  string plan_id = 1;
  google.protobuf.Timestamp expires_at = 2;
}

message EndPlanRequest {
  string plan_id = 1;
  bool commit = 2;
}
message EndPlanResponse {
  string plan_id = 1;
}

message GetPlanRequest {
  string plan_id = 1;
}
message GetPlanResponse {
  PlanDescriptor plan = 1;
}

service Planning {
  rpc BeginPlan(BeginPlanRequest) returns (BeginPlanResponse);
  rpc RenewPlan(RenewPlanRequest) returns (RenewPlanResponse);
  rpc EndPlan(EndPlanRequest) returns (EndPlanResponse);
  rpc GetPlan(GetPlanRequest) returns (GetPlanResponse);
}
